# kiro-gateway

./: .clabot  .env.example  .gitignore  AGENTS.md  CORE_PRINCIPLES.md  Dockerfile  README.md  auth.sh  builder-id-oauth.md  cli  kiro-cli.sh  main.py  push.sh  pyproject.toml
.opencode/: opencode.jsonc
docs/en/: ARCHITECTURE.md
docs/ru/: ARCHITECTURE.md
kiro/: AGENTS.md  account_manager.py  auth.py  config.py  converters_anthropic.py  converters_core.py  device_auth.py  model_resolver.py  models_anthropic.py  routes_accounts.py  routes_anthropic.py  routes_auth.py  routes_openai.py  streaming_anthropic.py  streaming_core.py  tokenizer.py
kiro_gateway/: config.py  converters.py  streaming.py
tests/: AGENTS.md  README.md  conftest.py
tests/unit/: test_account_manager.py  test_auth_manager.py  test_config.py  test_converters.py  test_converters_anthropic.py  test_converters_core.py  test_converters_openai.py  test_device_auth.py  test_model_resolver.py  test_routes_auth.py  test_streaming.py
