[project]
name = "kiro-gateway"
version = "0.1.0"
description = "OpenAI/Anthropic-compatible API gateway for Kiro"
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "loguru",
    "python-dotenv",
    "tiktoken",
    "requests",
]

[project.scripts]
kiro-gateway = "main:main"

[dependency-groups]
dev = [
    "hypothesis>=6.151.4",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
